social media links update

--- a/index.html
+++ b/index.html
@@ -119,12 +119,10 @@
     <div class="container text-center">
       <p>FIND US ON SOCIAL MEDIA</p>
           <div class="social-icons">
-            <a href="#"><img src="img/skype.png"></a>
-            <a href="#"><img src="img/linkedIn.png"></a>
-            <a href="#"><img src="img/skype.png"></a>
-            <a href="#"><img src="img/linkedIn.png"></a>
-            <a href="#"><img src="img/skype.png"></a>
-            <a href="#"><img src="img/linkedIn.png"></a>
+            <a href="https://www.skype.com/"><img src="img/skype.png"></a>
+            <a href="https://www.linkedIn.com/"><img src="img/linkedIn.png"></a>
+            <a href="https://www.facebook.com/"><img src="img/facebook.png"></a>
+            <a href="https://www.instagram.com/"><img src="img/instagram.png"></a>
           </div>
     </div>
   </section>
