some minor changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Animated Template</title>
+  <title>Static Template</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -103,7 +103,7 @@
           <p class="about-title">Why We're Different</p>
           <ul>
             <li>Understand our client's business goal first</li>
-            <li>Beleive in doing work with honesty</li>
+            <li>Believe in doing work with honesty</li>
             <li>We deliver on time</li>
           </ul>
         </div>
@@ -134,7 +134,7 @@
       <div class="row">
         <div class="col-md-4 footer-box">
           <img src="img/img.svg">
-              <p>Here will be the description of the image.Two to three lines of content will be here.</p>
+              <p>Here will be the description of basic service.Two to three lines of content will be here.</p>
         </div>
         <div class="col-md-4 footer-box">
               <p><b>CONTACT US</b></p>
